@@ -27,55 +27,49 @@ JHtml::_('behavior.keepalive');
 $data	= $this->get('data');
 ?>
 
-<form action="<?php echo JURI::base() ?>index.php" id="mailtoForm" method="post">
-
-<div style="padding: 10px;">
-	<div style="text-align:right">
-		<a href="javascript: void window.close()">
-			<?php echo JText::_('COM_MAILTO_CLOSE_WINDOW'); ?> <?php echo JHTML::_('image','mailto/close-x.png', NULL, NULL, true); ?></a>
-	</div>
-
+<div id="mailto-window">
 	<h2>
 		<?php echo JText::_('COM_MAILTO_EMAIL_TO_A_FRIEND'); ?>
 	</h2>
+	<div class="mailto-close">
+		<a href="javascript: void window.close()" title="<?php echo JText::_('COM_MAILTO_CLOSE_WINDOW'); ?>">
+		 <span><?php echo JText::_('COM_MAILTO_CLOSE_WINDOW'); ?> </span></a>
+	</div>
+	
+	<form action="<?php echo JURI::base() ?>index.php" id="mailtoForm" method="post">
+		<div class="formelm">
+			<label for="mailto_field"><?php echo JText::_('COM_MAILTO_EMAIL_TO'); ?></label>
+			<input type="text" id="mailto_field" name="mailto" class="inputbox" size="25" value="<?php echo $data->mailto ?>"/>
+		</div>
+		<div class="formelm">
+			<label for="sender_field">
+			<?php echo JText::_('COM_MAILTO_SENDER'); ?></label>
+			<input type="text" id="sender_field" name="sender" class="inputbox" value="<?php echo $data->sender ?>" size="25" />
+		</div>
+		<div class="formelm">
+			<label for="from_field">
+			<?php echo JText::_('COM_MAILTO_YOUR_EMAIL'); ?></label>
+			<input type="text" id="from_field" name="from" class="inputbox" value="<?php echo $data->from ?>" size="25" />
+		</div>	
+		<div class="formelm">
+			<label for="subject_field">
+			<?php echo JText::_('COM_MAILTO_SUBJECT'); ?></label>
+			<input type="text" id="subject_field" name="subject" class="inputbox" value="<?php echo $data->subject ?>" size="25" />
+		</div>
+		<p>
+			<button class="button" onclick="return Joomla.submitbutton('send');">
+				<?php echo JText::_('COM_MAILTO_SEND'); ?>
+			</button>
+			<button class="button" onclick="window.close();return false;">
+				<?php echo JText::_('COM_MAILTO_CANCEL'); ?>
+			</button>
+		</p>
+		<input type="hidden" name="layout" value="<?php echo $this->getLayout();?>" />
+		<input type="hidden" name="option" value="com_mailto" />
+		<input type="hidden" name="task" value="send" />
+		<input type="hidden" name="tmpl" value="component" />
+		<input type="hidden" name="link" value="<?php echo $data->link; ?>" />
+		<?php echo JHtml::_('form.token'); ?>
 
-	<p>
-		<?php echo JText::_('COM_MAILTO_EMAIL_TO'); ?>:
-		<br />
-		<input type="text" name="mailto" class="inputbox" size="25" value="<?php echo $data->mailto ?>"/>
-	</p>
-
-	<p>
-		<?php echo JText::_('COM_MAILTO_SENDER'); ?>:
-		<br />
-		<input type="text" name="sender" class="inputbox" value="<?php echo $data->sender ?>" size="25" />
-	</p>
-
-	<p>
-		<?php echo JText::_('COM_MAILTO_YOUR_EMAIL'); ?>:
-		<br />
-		<input type="text" name="from" class="inputbox" value="<?php echo $data->from ?>" size="25" />
-	</p>
-
-	<p>
-		<?php echo JText::_('COM_MAILTO_SUBJECT'); ?>:
-		<br />
-		<input type="text" name="subject" class="inputbox" value="<?php echo $data->subject ?>" size="25" />
-	</p>
-
-	<p>
-		<button class="button" onclick="return Joomla.submitbutton('send');">
-			<?php echo JText::_('COM_MAILTO_SEND'); ?>
-		</button>
-		<button class="button" onclick="window.close();return false;">
-			<?php echo JText::_('COM_MAILTO_CANCEL'); ?>
-		</button>
-	</p>
-	<input type="hidden" name="layout" value="<?php echo $this->getLayout();?>" />
-	<input type="hidden" name="option" value="com_mailto" />
-	<input type="hidden" name="task" value="send" />
-	<input type="hidden" name="tmpl" value="component" />
-	<input type="hidden" name="link" value="<?php echo $data->link; ?>" />
-	<?php echo JHtml::_('form.token'); ?>
+	</form>
 </div>
-</form>
