@@ -158,3 +158,11 @@ div.current
 
 .item-page
 { width:100%}
+
+#mailto-window  .mailto-close a
+{
+
+	width:25px; 
+	height:25px;
+	
+}
