@@ -33,6 +33,7 @@ $ -> Language fix or change
  # [#23150] Error if menu alias = "component" (Elin Waring)
  # [#23325] Component Setting should get an apply button (Dennis Hermacki)
  # [#23305] No checking to ensure behavior.keepalive only gets loaded once. (Ian MacLennan)
+ # [#23360] component_view Email to a friend etc. Patch attached (Angie Radtke)
 
 17-Nov-2010 Jean-Marie Simonet
  # Added icon for the new My Profile menu [#23347]
